chore(generator): migrate Paths.get(..) to Path.of(..)