@@ -2,7 +2,7 @@ package tech.jhipster.lite.module.domain.file;
 
 import static org.assertj.core.api.Assertions.*;
 
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import org.junit.jupiter.api.Test;
 import tech.jhipster.lite.UnitTest;
 
@@ -11,28 +11,28 @@ class JHipsterSourceTest {
 
   @Test
   void shouldAppendMustacheExtensionWhenReadingTemplate() {
-    assertThat(new JHipsterSource(Paths.get("src/main/resources")).template("Assert.java").get().toString()).endsWith(".mustache");
+    assertThat(new JHipsterSource(Path.of("src/main/resources")).template("Assert.java").get().toString()).endsWith(".mustache");
   }
 
   @Test
   void shouldNotAppendMustacheExtensionTwiceWhenReadingTemplate() {
-    assertThat(new JHipsterSource(Paths.get("src/main/resources")).template("Assert.java.mustache").get().toString()).doesNotEndWith(
+    assertThat(new JHipsterSource(Path.of("src/main/resources")).template("Assert.java.mustache").get().toString()).doesNotEndWith(
       ".mustache.mustache"
     );
   }
 
   @Test
   void shouldGetTemplateExtension() {
-    assertThat(new JHipsterSource(Paths.get("src/main/resources")).template("Assert.java.mustache").extension()).isEqualTo(".java");
+    assertThat(new JHipsterSource(Path.of("src/main/resources")).template("Assert.java.mustache").extension()).isEqualTo(".java");
   }
 
   @Test
   void shouldGetFileExtension() {
-    assertThat(new JHipsterSource(Paths.get("src/main/resources")).file("Assert.java").extension()).isEqualTo(".java");
+    assertThat(new JHipsterSource(Path.of("src/main/resources")).file("Assert.java").extension()).isEqualTo(".java");
   }
 
   @Test
   void testToStringShowsPath() {
-    assertThat(new JHipsterSource(Paths.get("sample"))).hasToString("sample");
+    assertThat(new JHipsterSource(Path.of("sample"))).hasToString("sample");
   }
 }
