@@ -6,20 +6,19 @@ import static tech.jhipster.lite.module.domain.JHipsterModule.propertyKey;
 import static tech.jhipster.lite.module.domain.JHipsterModule.propertyValue;
 
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import org.junit.jupiter.api.Test;
 import tech.jhipster.lite.UnitTest;
 
 @UnitTest
 class PropertiesFileSpringFactoriesHandlerTest {
 
-  public static final Path EXISTING_SPRING_FACTORIES = Paths.get(
+  public static final Path EXISTING_SPRING_FACTORIES = Path.of(
     "src/test/resources/projects/project-with-spring-factories/spring.factories"
   );
 
   @Test
   void shouldCreateUnknownFile() {
-    Path factoriesFile = Paths.get(tmpDirForTest(), "src/test/resources/META-INF/spring.factories");
+    Path factoriesFile = Path.of(tmpDirForTest(), "src/test/resources/META-INF/spring.factories");
     PropertiesFileSpringFactoriesHandler handler = new PropertiesFileSpringFactoriesHandler(factoriesFile);
 
     handler.append(propertyKey("o.s.c.ApplicationListener"), propertyValue("c.m.m.MyListener1", "c.m.m.MyListener2"));
@@ -33,7 +32,7 @@ class PropertiesFileSpringFactoriesHandlerTest {
 
   @Test
   void shouldAppendPropertyToFileWithProperties() {
-    Path factoriesFile = Paths.get(tmpDirForTest(), "src/test/resources/META-INF/spring.factories");
+    Path factoriesFile = Path.of(tmpDirForTest(), "src/test/resources/META-INF/spring.factories");
     loadDefaultProperties(EXISTING_SPRING_FACTORIES, factoriesFile);
     PropertiesFileSpringFactoriesHandler handler = new PropertiesFileSpringFactoriesHandler(factoriesFile);
 
@@ -49,7 +48,7 @@ class PropertiesFileSpringFactoriesHandlerTest {
 
   @Test
   void shouldAppendToExistingProperty() {
-    Path factoriesFile = Paths.get(tmpDirForTest(), "src/test/resources/META-INF/spring.factories");
+    Path factoriesFile = Path.of(tmpDirForTest(), "src/test/resources/META-INF/spring.factories");
     loadDefaultProperties(EXISTING_SPRING_FACTORIES, factoriesFile);
     PropertiesFileSpringFactoriesHandler handler = new PropertiesFileSpringFactoriesHandler(factoriesFile);
 
@@ -67,7 +66,7 @@ class PropertiesFileSpringFactoriesHandlerTest {
 
   @Test
   void shouldAppendNewAndExistingProperties() {
-    Path factoriesFile = Paths.get(tmpDirForTest(), "src/test/resources/META-INF/spring.factories");
+    Path factoriesFile = Path.of(tmpDirForTest(), "src/test/resources/META-INF/spring.factories");
     loadDefaultProperties(EXISTING_SPRING_FACTORIES, factoriesFile);
     PropertiesFileSpringFactoriesHandler handler = new PropertiesFileSpringFactoriesHandler(factoriesFile);
 
@@ -87,7 +86,7 @@ class PropertiesFileSpringFactoriesHandlerTest {
 
   @Test
   void shouldNotAppendExistingValue() {
-    Path factoriesFile = Paths.get(tmpDirForTest(), "src/test/resources/META-INF/spring.factories");
+    Path factoriesFile = Path.of(tmpDirForTest(), "src/test/resources/META-INF/spring.factories");
     PropertiesFileSpringFactoriesHandler handler = new PropertiesFileSpringFactoriesHandler(factoriesFile);
 
     handler.append(
